Bug fix to prevent map overlapping content

--- a/_style/css/main.css
+++ b/_style/css/main.css
@@ -1729,6 +1729,7 @@ input.button-s,
   margin: 0 0 1em 0;
   -webkit-transform: translateZ(0);
   position: relative;
+  background-color: #399fd3;
 }
 
 .brick:before {
@@ -1885,6 +1886,7 @@ input.button-s,
 
 .calendar .calendar-week .calendar-has-event:hover {
   outline: 2px solid #cf1b41;
+  cursor: default;
 }
 
 .calendar .calendar-events {
