--- a/_style/scss/patterns/bricks.scss
+++ b/_style/scss/patterns/bricks.scss
@@ -9,6 +9,7 @@
     margin: 0 0 1em 0;
     -webkit-transform: translateZ(0);
     position: relative;
+    background-color: $color-blue;
     }
 
 .brick:before {
