--- a/_style/scss/patterns/calendar.scss
+++ b/_style/scss/patterns/calendar.scss
@@ -62,6 +62,7 @@
 
 .calendar .calendar-week .calendar-has-event:hover {
 	outline: 2px solid $color-red;
+	cursor: default;
 	}
 
 .calendar .calendar-events {
